# django-practices

./: .gitignore  django-practices.code-workspace  package-lock.json  package.json  pyproject.toml  webpack.config.js
accounts/: forms.py  tests.py  urls.py
django_project/: api.py  settings.py  (+1 more)
task-1-db-manipulation/: .gitignore  Dockerfile  Makefile  fly.toml  package-lock.json  package.json  pyproject.toml
task-1-db-manipulation/django_project/: settings.py  urls.py
task-1-db-manipulation/django_project/django_project/: settings.py
task-1-db-manipulation/signup/: urls.py  views.py
task-1-db-manipulation/static/src/: output.css
task-1-db-manipulation/templates/: _base.html  todo_create.html  todo_delete.html  todo_edit.html  todo_home.html
task-1-db-manipulation/templates/registration/: login.html  signup.html
task-1-db-manipulation/todos/: forms.py  models.py  urls.py  views.py
task-1-db-manipulation/todos/migrations/: 0001_initial.py
task-2-prod-db/: .gitignore  package-lock.json  pyproject.toml
task-2-prod-db/accounts/: forms.py  tests.py  urls.py  views.py
task-2-prod-db/django_project/: settings.py  urls.py
task-2-prod-db/prod/: forms.py  urls.py  views.py
task-2-prod-db/prod/management/commands/: prod_seed.py
task-2-prod-db/prod/migrations/: 0001_initial.py
task-2-prod-db/static/css/: output.css
task-2-prod-db/static/src/: input.css
task-2-prod-db/templates/: _base.html  article_delete.html  article_detail.html  article_update.html  home.html  prod_create.html  prod_delete.html  prod_detail.html  prod_list.html  prod_search_result.html  prod_update.html  query_form.html
task-2-prod-db/templates/registration/: login.html  password_reset_confirm.html  signup.html
task-7-autocomplete/: Makefile  package-lock.json  package.json  pyproject.toml
task-7-autocomplete/accounts/: urls.py  views.py
task-7-autocomplete/api/: urls.py
task-7-autocomplete/django_project/: api.py  settings.py  urls.py
task-7-autocomplete/manufacturer/: models.py  urls.py  views.py
task-7-autocomplete/order/: admin.py  filters.py  forms.py  models.py  tables.py  urls.py  views.py
task-7-autocomplete/order/management/commands/: seed_order.py
task-7-autocomplete/order/templates/: order_circulated_order.html  order_create_multiple.html  order_create_multiple_head.html  order_list.html  order_rules.html
task-7-autocomplete/order/templates/include/: order_form.html  orderprod_grid_table.html
task-7-autocomplete/order/templates/include/head/: order_circulated_order_head.html
task-7-autocomplete/prod/: admin.py  filters.py  forms.py  models.py  tables.py  urls.py  views.py
task-7-autocomplete/prod/management/commands/: prod_seed.py
task-7-autocomplete/prod/templates/: prod_create.html  prod_create_multiple.html  prod_create_multiple.js  prod_detail.html
task-7-autocomplete/static/css/: output.css.map
task-7-autocomplete/static/js/: order_circulated_order.js
task-7-autocomplete/static/src/: custom.scss
task-7-autocomplete/templates/: _base.html  home.html
(+230 files in other folders)
