[tool.poetry]
name = "task-1-db-manipulation"
version = "0.1.0"
description = ""
authors = ["exkuretrol <33695301+exkuretrol@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.0.1"
django-environs = {extras = ["django"], version = "^0.1.1"}
psycopg-binary = {extras = ["binary"], version = "^3.1.17"}
whitenoise = "^6.6.0"
gunicorn = "^21.2.0"
djlint = "^1.34.1"
django-browser-reload = "^1.12.1"
psycopg2 = "^2.9.9"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
